Add MAX_KEEP to backup.conf

--- a/backup.conf
+++ b/backup.conf
@@ -1,5 +1,6 @@
 # URL_TYPE = "SMB" or "LOCAL"
 FULL_DAY="Sat"
+MAX_KEEP=7 # max backup to be keep (days) (0 to keep all backups)
 URL_TYPE="SMB"
 BACKUP_DIR="" # if URL_TYPE = "SMB" then backup to SMB_URL+BACKUP_DIR
 SMB_URL="//samba-server/backup"
